--- a/lib/ankhanh-contact/c-1/index.pug
+++ b/lib/ankhanh-contact/c-1/index.pug
@@ -8,8 +8,7 @@ section.canhcam-ankhanh-contact-c-1
 			.col-md-5.col-lg-4.company
 				article.inf.h-100(bg-img="./img/ankhanh-contact/c_3.png")
 					.title
-						h2.h2.text-center.text-md-left Công ty Liên doanh TNHH					
-						h2.h2.text-center.text-md-left Phát triển Đô thị mới An Khánh
+						h3.h3.text-center.text-md-left Công ty Liên doanh TNHH Phát triển Đô thị mới An Khánh
 					p.text-center.text-md-left Km10+600, Đại lô Thăng Long, An Khánh, Hoài Đức, Hà Nội
 					p.text-center.text-md-left Điện thoại: 024 3755 6541
 					p.text-center.text-md-left Fax: 024 3755 6546
