--- a/lib/ankhanh-footer/f-1/index.sass
+++ b/lib/ankhanh-footer/f-1/index.sass
@@ -6,7 +6,7 @@
 .canhcam-ankhanh-footer-f-1
 	background-position: center center
 	+pad(5rem 0 5.71rem)
-	color: color-get($mau-ankhanh, trang)
+	color: color-get($ankhanh, trang)
 	i, .mdi 
 		font-size: 1.07rem
 		padding: 0 0.78rem 0 0
@@ -56,19 +56,19 @@
 			ul
 				margin-bottom: 0
 				+fz(.9rem)
-				color: color-get($mau-ankhanh,vang-1)
+				color: color-get($ankhanh,vang-1)
 		label 
 			+fz(1rem)
 			+fw(100)
 			opacity: .5
 		input, textarea
 			background: rgba(0,0,0,0.25)
-			color: color-get($mau-ankhanh,trang)
+			color: color-get($ankhanh,trang)
 			&:focus
-				color: color-get($mau-ankhanh,trang)
+				color: color-get($ankhanh,trang)
 				background: rgba(0,0,0,0.25)
 		input, textarea
-			border: 1px solid color-get($mau-ankhanh,main-4)
+			border: 1px solid color-get($ankhanh,main)
 		.btn-submit 
 			cursor: pointer
 			border: 1px solid #ffffff
@@ -77,12 +77,12 @@
 			border-radius: 2rem
 			+transition(all .5s ease-in-out)
 			&:hover
-				border: 1px solid color-get($mau-ankhanh,main-4)
+				border: 1px solid color-get($ankhanh,main)
 			a 
 				+pad(2rem)
 .copy-right
 	p.text-f
 		font-size: 1rem 
 		+fw(100)
-		color: color-get($mau-ankhanh,duong-3)
+		color: color-get($ankhanh,xam-2)
 		+mar(1.29rem 0)
