--- a/lib/ankhanh-recruitment/r-2/index.sass
+++ b/lib/ankhanh-recruitment/r-2/index.sass
@@ -8,7 +8,7 @@ section.canhcam-ankhanh-recruitment-r-2
 	h2 
 		+fz(2.7rem)
 		+fw(600)
-		color: color-get($mau, main)
+		color: color-get($ankhanh, main)
 	.group
 		+media-breakpoint-up(md)
 			flex-wrap: nowrap
@@ -27,7 +27,7 @@ section.canhcam-ankhanh-recruitment-r-2
 			+media-breakpoint-down(md)
 				+mar(1rem)
 		.c
-			background: color-get($mau, trang)
+			background: color-get($ankhanh, trang)
 			width: 100%
 			+pad(2rem)
 			border-radius: 10px
@@ -36,13 +36,13 @@ section.canhcam-ankhanh-recruitment-r-2
 
 		i 
 			+fz(2.8rem)
-			color: color-get($mau, main)
+			color: color-get($ankhanh, main)
 			z-index: 100
 		h3 
 			+mar(0)
 			+pad(2.35rem 0 2.14rem)
 			+fw(400)
-			color: color-get($mau, main)
+			color: color-get($ankhanh, main)
 			z-index: 100
 			+fz(2.57rem)
 
