--- a/lib/ankhanhjvc/t-1/index.sass
+++ b/lib/ankhanhjvc/t-1/index.sass
@@ -28,4 +28,4 @@
 		font-weight: 900
 		font-size: 2.57rem
 		padding-right: 0.78rem
-		color: color-get($mau, xam-4)
+		color: color-get($ankhanh, xam-1)
