--- a/lib/ankhanhjvc/t-3/index.sass
+++ b/lib/ankhanhjvc/t-3/index.sass
@@ -12,7 +12,7 @@
 		text-align: center
 		// box-shadow: 10px 10px 0 0 color-rgba(color-get($mau, main),.35)
 		+media-breakpoint-up(lg)
-			box-shadow: 10px 10px 0 0 color-rgba(color-get($mau, main),.35)
+			box-shadow: 10px 10px 0 0 color-rgba(color-get($ankhanh, main),.35)
 	.content
 		+pad(2rem 3.5rem)
 		-webkit-border-image: url('../img/ankhanhjvc/tamnhin/border.png') 19/19px round
