--- a/lib/ankhanhjvc/t-4/index.sass
+++ b/lib/ankhanhjvc/t-4/index.sass
@@ -14,8 +14,8 @@
 		.partner-wrap
 			text-align: center
 			cursor: pointer
-			border: 1px solid color-rgba(color-get($mau,den),.2)
-			box-shadow: 0 0 5px color-rgba(color-get($mau,den),.2)
+			border: 1px solid color-rgba(color-get($ankhanh,den),.2)
+			box-shadow: 0 0 5px color-rgba(color-get($ankhanh,den),.2)
 			margin-bottom: r(30px)
 			box-sizing: border-box
 			+media-breakpoint-up(lg)
