--- a/lib/header/h-14/index.pug
+++ b/lib/header/h-14/index.pug
@@ -49,19 +49,19 @@ header.canhcam-header-14
 					a.nav-link.home(href='#') 
 						p.mb-0.d-lg-none Home
 				li.nav-item
-					a.nav-link(href='#') Giới thiệu
+					a.nav-link(href='index.html') Giới thiệu
 				li.nav-item
-					a.nav-link(href='#') Sản phẩm
+					a.nav-link(href='product.html') Sản phẩm
 				li.nav-item
-					a.nav-link(href='#') Vị trí
+					a.nav-link(href='location.html') Vị trí
 				li.nav-item
-					a.nav-link(href='#') Tiện ích
+					a.nav-link(href='tienich.html') Tiện ích
 				li.nav-item
-					a.nav-link(href='#') Tiến độ
+					a.nav-link(href='ankhanh-progress.html') Tiến độ
 				li.nav-item
-					a.nav-link(href='#') Hỗ trợ tài chính
+					a.nav-link(href='support.html') Hỗ trợ tài chính
 				li.nav-item
-					a.nav-link(href='#') An khánh jvc
+					a.nav-link(href='ankhanhjvc.html') An khánh jvc
 				li.nav-item
 					a.nav-link(href='#') Nhịp sống splendora
 			#top-nav
