--- a/lib/index/b-1/index.sass
+++ b/lib/index/b-1/index.sass
@@ -21,16 +21,16 @@
 				+fz(r(16px))
 				.btn-more
 					+fz(r(16px))
-					color: color-get($mau,trang)
+					color: color-get($ankhanh,trang)
 					+pad(r(11px) r(38px))
-					background: linear-gradient(to right, color-get($mau,extra), color-get($mau,main))
+					background: linear-gradient(to right, color-get($ankhanh,extra), color-get($ankhanh,main))
 					border-radius: r(20px)
 					text-transform: uppercase
 					+fw(400)
 					&:active, &:hover
 						background: rgba(177, 131, 8, 0)
-						color: color-get($mau,den)
-						box-shadow: 0 0 0 2px color-get($mau,main) inset
+						color: color-get($ankhanh,den)
+						box-shadow: 0 0 0 2px color-get($ankhanh,main) inset
 			img 
 				width: 100%
 				+mar(0 0 2rem 0)
