--- a/lib/index/b-2/index.sass
+++ b/lib/index/b-2/index.sass
@@ -23,7 +23,7 @@
 				max-width: 75%
 				+mar(0 r(15px) 0 0)
 			.h2
-				color: color-get($mau,trang)
+				color: color-get($ankhanh,trang)
 				font-weight: bold
 				text-transform: uppercase
 				+mar(0 0 2rem 0)
@@ -38,12 +38,12 @@
 					font-weight: 300
 				.btn-more
 					+fz(1rem)
-					color: color-get($mau,trang)
+					color: color-get($ankhanh,trang)
 					+pad(r(11px) r(38px))
 					border-radius: 20px
 					text-transform: uppercase
 					+fw(500)
-					border: 2px solid color-get($mau,trang)
+					border: 2px solid color-get($ankhanh,trang)
 					&:active, &:hover
-						background: color-get($mau,trang)
-						color: color-get($mau,den)
+						background: color-get($ankhanh,trang)
+						color: color-get($ankhanh,den)
