--- a/lib/index/b-3/index.sass
+++ b/lib/index/b-3/index.sass
@@ -13,7 +13,7 @@
 			.title
 				text-transform: uppercase
 				font-weight: bold
-				color: color-get($mau,main)
+				color: color-get($ankhanh,main)
 				+fz(2rem)
 				+media-breakpoint-up(lg)
 					+fz(r(36px))
@@ -24,7 +24,7 @@
 				+fw(300)
 		.box-img
 			overflow: hidden
-			border: 1px solid color-get($mau,main)
+			border: 1px solid color-get($ankhanh,main)
 			border-radius: 0 2.85rem
 			img
 				width: 100%
