--- a/lib/index/b-6/index.sass
+++ b/lib/index/b-6/index.sass
@@ -11,7 +11,7 @@
 		font-weight: bold
 		text-transform: uppercase
 		+mar(0 0 2rem 0)
-		color: color-get($mau, main)
+		color: color-get($ankhanh, main)
 		+fz(2rem)
 		+media-breakpoint-up(lg)
 			+fz(r(36px))
