--- a/lib/location/l-1/index.sass
+++ b/lib/location/l-1/index.sass
@@ -6,16 +6,17 @@
 .location-home
 	.h1
 		+mar(2rem 0)
-		+fz(r(36px))
-		color: color-get($mau,main)
+		+fz(2rem)
+		color: color-get($ankhanh,main)
 		font-weight: bold
 		+media-breakpoint-up(lg)
+			+fz(r(36px))
 			+mar(4rem 0)
 	.map
 		min-height: (r(450px))
-		border: 1px solid color-get($mau,main)
+		border: 1px solid color-get($ankhanh,main)
 	.h2
 		+fz(r(22px))
-		color: color-get($mau,duong-1)
+		color: color-get($ankhanh,brief-content)
 	.content
 		+fz(r(16px))
