--- a/lib/nav/n-2/index.pug
+++ b/lib/nav/n-2/index.pug
@@ -1,13 +1,11 @@
-section.canhcam-nav-9
-	article.nav-list
-		.container
-			nav
-				ul
-					li
-						a(data-link="about-1" href="tongquan.html") Tổng quan
-					li
-						a(data-link="about-2" href="quyhoach.html") Quy hoạch
-					li
-						a(data-link="about-3" href="thietke.html") Thiết kế
-					li
-						a(data-link="about-4" href="phattrien.html") Các giai đoạn phát triển
+section.canhcam-nav-4
+	.container
+		ul.nav.nav-list
+			li.nav-item
+				a.nav-link(href="tongquan.html") Tổng quan
+			li.nav-item.active
+				a.nav-link(href="quyhoach.html") Quy hoạch
+			li.nav-item
+				a.nav-link(href="phattrien.html") Phát triển
+			li.nav-item
+				a.nav-link(href="thietke.html") Thiết kế
