--- a/lib/nav/n-4/index.sass
+++ b/lib/nav/n-4/index.sass
@@ -5,7 +5,7 @@
 
 .canhcam-nav-4
 	.nav-list
-		border-bottom: 1px solid color-get($mau, main)
+		border-bottom: 1px solid color-get($ankhanh, main)
 		justify-content: center
 		.nav-item
 			+pad(0)
@@ -13,8 +13,8 @@
 				+fz(r(16px))
 				text-transform: uppercase
 				+pad(.6rem 2rem)
-				color: color-get($mau, xam-3)
+				color: color-get($ankhanh, content)
 			+ .active
 				.nav-link
 					+bg-rad
-					color: color-get($mau, trang)
+					color: color-get($ankhanh, trang)
