--- a/lib/product/BT5/b-2/index.sass
+++ b/lib/product/BT5/b-2/index.sass
@@ -8,33 +8,34 @@
 	+media-breakpoint-up(lg)
 		+pad(4rem 0)
 	.h2
-		+fz(1.8rem)
-		color: color-get($mau,trang)
+		+fz(2rem)
+		color: color-get($ankhanh,trang)
 		font-weight: bold
 		+mar(0)
 		+media-breakpoint-up(lg)
-			color: color-get($mau,main)
+			+fz(r(36px))
+			color: color-get($ankhanh,main)
 	.box-img
-		min-height: 300px
+		min-height: r(300px)
 		overflow: hidden
 		+media-breakpoint-up(lg)
-			min-height: 700px
+			min-height: r(700px)
 	.box-content
 		.content
 			+mar(0)
 		.link
-			color: color-get($mau,trang)
+			color: color-get($ankhanh,trang)
 			&:hover, &:active
 				text-decoration: none
 		.h3
-			+fz(1.375rem)
+			+fz(r(22px))
 	+media-breakpoint-up(lg)
 		.box-content
 			+pad(2rem)
-			min-height: 400px
+			min-height: r(400px)
 			opacity: .9
 			+mar(4rem 0)
 			.content
-				color: color-get($mau,trang)
+				color: color-get($ankhanh,trang)
 			.h3
-				color: color-get($mau,trang)
+				color: color-get($ankhanh,trang)
