--- a/lib/product/BT5/b-3/index.sass
+++ b/lib/product/BT5/b-3/index.sass
@@ -8,10 +8,12 @@
 	+media-breakpoint-up(lg)
 		+pad(4rem 0)
 	.h2
-		+fz(1.8rem)
-		color: color-get($mau,main)
+		+fz(2rem)
+		color: color-get($ankhanh,main)
 		font-weight: bold
 		+mar(0)
+		+media-breakpoint-up(lg)
+			+fz(r(36px))
 	.box-content
 		+pad(3rem)
-		box-shadow: 0 0 20px 5px color-get($mau, xam-1)
+		box-shadow: 0 0 20px 5px color-get($ankhanh, xam-1)
