--- a/lib/product/BT5/b-6/index.sass
+++ b/lib/product/BT5/b-6/index.sass
@@ -8,7 +8,9 @@
 	+media-breakpoint-up(lg)
 		+pad(4rem 0)
 	.h2
-		+fz(1.8rem)
-		color: color-get($mau,trang)
+		+fz(2rem)
+		color: color-get($ankhanh,trang)
 		font-weight: bold
 		+mar(0)
+		+media-breakpoint-up(lg)
+			+fz(r(36px))
