--- a/lib/support/s-1/index.sass
+++ b/lib/support/s-1/index.sass
@@ -6,11 +6,12 @@
 .support-home
 	.h1
 		+mar(2rem 0)
-		+fz(r(36px))
-		color: color-get($mau,main)
+		+fz(2rem)
+		color: color-get($ankhanh,main)
 		font-weight: bold
 		+media-breakpoint-up(lg)
 			+mar(4rem 0 2rem)
+			+fz(r(36px))
 	.box-content
 		.content
 			+fz(r(16px))
