--- a/templates/bt5.pug
+++ b/templates/bt5.pug
@@ -16,3 +16,5 @@ block body
 	include ../lib/product/bt5/b-5/index.pug
 	include ../lib/product/bt5/b-6/index.pug
 	include ../lib/product/bt5/b-7/index.pug
+block footer
+	include ../lib/ankhanh-footer/f-1/index.pug
