--- a/templates/sinhhoatcongdong.pug
+++ b/templates/sinhhoatcongdong.pug
@@ -10,3 +10,5 @@ block body
 	include ../lib/slider/s-1/index.pug
 	include ../lib/nav/n-2/index.pug
 	include ../lib/utilities/utilities-detail/d-1/index.pug
+block footer
+	include ../lib/ankhanh-footer/f-1/index.pug
