--- a/templates/support.pug
+++ b/templates/support.pug
@@ -9,3 +9,5 @@ block header
 block body
 	include ../lib/slider/s-1/index.pug
 	include ../lib/support/s-1/index.pug
+block footer
+	include ../lib/ankhanh-footer/f-1/index.pug
