--- a/lib/ankhanh-navbar/n-3/index.sass
+++ b/lib/ankhanh-navbar/n-3/index.sass
@@ -5,28 +5,28 @@
 
 .canhcam-ankhanh-navbar
 	.navbar-2
-		border-bottom: 1px solid color-get($mau,main-3)
+		border-bottom: 1px solid color-get($ankhanh,main)
 	.nav-item
 		+transition(all .5s ease-in-out)
 		.nav-link
 			+fz(1.14rem)
 			+fw(400)
-			color: color-get($mau, xam-4)
+			color: color-get($ankhanh, xam-2)
 			text-transform: uppercase
 			+pad(.5rem 2.14rem)
 			border-radius: 0
 			+media-breakpoint-up(md)
 				&:hover
-					background: linear-gradient(-90deg, #b18308 0%, #f2da85 100%)
-					color: color-get($mau, trang) !important
+					background: linear-gradient(-90deg, #ba8c2d 0%, #eed57e 100%)
+					color: color-get($ankhanh, trang) !important
 					border: none
 			+media-breakpoint-down(md)
 				&:active
-					background: linear-gradient(-90deg, #b18308 0%, #f2da85 100%)
-					color: color-get($mau, trang) !important
+					background: linear-gradient(-90deg, #ba8c2d 0%, #eed57e 100%)
+					color: color-get($ankhanh, trang) !important
 					border: none
 	.active
-		background: linear-gradient(-90deg, #b18308 0%, #f2da85 100%)
+		background: linear-gradient(-90deg, #ba8c2d 0%, #eed57e 100%)
 		a 
-			color: color-get($mau, trang) !important
+			color: color-get($ankhanh, trang) !important
 		border: none
