--- a/lib/ankhanh-news-detail/n-1/index.sass
+++ b/lib/ankhanh-news-detail/n-1/index.sass
@@ -16,7 +16,7 @@ body
 			h1
 				+fz(1.57rem)
 				+fw(inherit)
-				color: color-get($mau-ankhanh, main)
+				color: color-get($ankhanh, main)
 		figure
 			+mar(2rem 0 1.5rem 0)
 			overflow: hidden
@@ -28,7 +28,7 @@ body
 				+fz(1.07rem)
 				+fw(100)
 				+lh(1.6rem)
-				color: color-get($mau-ankhanh, xam-ct)
+				color: color-get($ankhanh, xam-ct)
 				&:after
 					content: ""
 					background: gray
@@ -43,13 +43,13 @@ body
 			+fw(100)
 			+lh(1.6rem)
 			margin: 0
-			color: color-get($mau-ankhanh, xam-ct)
+			color: color-get($ankhanh, xam-ct)
 			&.lead
 				+fw(bold)
 		time
 			+fz(1.07rem)
 			+fw(100)
-			color: color-get($mau-ankhanh,xam-ankhanh)
+			color: color-get($ankhanh,xam-1)
 		.item-news-read
 			text-decoration: none
 		.social-networks
@@ -64,8 +64,8 @@ body
 			+mar(0)
 		.othernews
 			h2
-				background: color-get($mau-ankhanh, main)
-				color: color-get($mau-ankhanh, trang)
+				background: color-get($ankhanh, main)
+				color: color-get($ankhanh, trang)
 				+fz(1.71rem)
 				+fw(initial)
 				+mar(0 0 1.5rem 0)
@@ -75,7 +75,7 @@ body
 					align-items: center
 					justify-content: center
 			// h3
-			// 	color: color-get($mau-ankhanh,main)
+			// 	color: color-get($ankhanh,main)
 			// 	+fz(1.4rem)
 			// 	+
 			// 	margin-bottom: 0
@@ -84,14 +84,14 @@ body
 		.item-news
 			h3
 				+fz(1.07rem)
-				color: color-get($mau-ankhanh,den)
+				color: color-get($ankhanh,den)
 				+pad(.5rem 0 .25 0)
 				+fw(100)
 			time
 				+pad(1.07rem 0)
 				+fz(1.07rem)
 				+fw(100)
-				color: darken(color-get($mau-ankhanh,trang) ,30%)
+				color: darken(color-get($ankhanh,trang) ,30%)
 			img 
 				width: 100%
 				max-width: 100%
