--- a/lib/ankhanhjvc/t-2/index.sass
+++ b/lib/ankhanhjvc/t-2/index.sass
@@ -18,13 +18,13 @@
 				margin-bottom: 1.5rem
 				+fz(r(16px))
 			&.text-second
-				background: color-rgba(color-get($mau,duong-3), .1)
+				background: color-rgba(color-get($ankhanh,brief-content), .1)
 				+pad(2.25rem 1.8rem)
 				h4
 					+fz(r(18px))
 					margin-bottom: 1.25rem
 					text-transform: uppercase
-					color: color-get($mau, duong-3)
+					color: color-get($ankhanh, brief-content)
 				ul
 					padding-left: 0
 					list-style-type: none
@@ -37,4 +37,4 @@
 							width: 8px
 							height: 8px
 							+bor-rad(50%)
-							background: color-rgba(color-get($mau,den),.15)
+							background: color-rgba(color-get($ankhanh,den),.15)
