--- a/lib/ankhanhjvc/t-5/index.sass
+++ b/lib/ankhanhjvc/t-5/index.sass
@@ -12,7 +12,7 @@
 				+pad(0 2px)
 				figure
 					margin-bottom: 5px
-					box-shadow: 0 0 10px color-rgba(color-get($mau, den), .25)
+					box-shadow: 0 0 10px color-rgba(color-get($ankhanh, den), .25)
 					figcaption
 						+pad(1rem 0)
 						h3
