--- a/lib/introduce/thietke/t-1/index.sass
+++ b/lib/introduce/thietke/t-1/index.sass
@@ -5,14 +5,14 @@
 
 section.canhcam-project-detail-7
 	+pad(0 0 3rem 0)
-	background: color-get($mau,trang)
+	background: color-get($ankhanh,trang)
 	+media-breakpoint-up(lg)
 		+pad(0 0 4rem 0)
 	.slide
 		.title
 			margin-top: r(46px)
 			+fz(2rem)
-			color: color-get($mau,main)
+			color: color-get($ankhanh,main)
 			font-weight: bold
 			+media-breakpoint-up(lg)
 				+fz(r(36px))
@@ -20,7 +20,7 @@ section.canhcam-project-detail-7
 			+fz(r(16px))
 		.brief-content
 			+fz(r(22px))
-			color: color-get($mau,duong-1)
+			color: color-get($ankhanh,brief-content)
 		.item
 			.circle
 				list-style-type: disc
