--- a/lib/product/BT5/b-1/index.sass
+++ b/lib/product/BT5/b-1/index.sass
@@ -8,16 +8,18 @@
 	+media-breakpoint-up(lg)
 		+pad(4rem 0)
 	.h2
-		+fz(1.8rem)
-		color: color-get($mau,main)
+		+fz(2rem)
+		color: color-get($ankhanh,main)
 		font-weight: bold
 		+mar(0)
+		+media-breakpoint-up(lg)
+			+fz(r(36px))
 	.full-width
 		.box-img
-			min-height: 300px
+			min-height: r(300px)
 			overflow: hidden
 			+media-breakpoint-up(lg)
-				min-height: 700px
+				min-height: r(700px)
 	.box-content
 		.content
 			+mar(0)
