--- a/lib/product/BT5/b-7/index.sass
+++ b/lib/product/BT5/b-7/index.sass
@@ -12,16 +12,16 @@
 			+mar(0)
 			.box-content
 				+pad(r(20px) r(30px))
-				background: color-get($mau,duong-1)
+				background: color-get($ankhanh,brief-content)
 				.h3
 					+fz(r(18px))
 					+pad(1rem 0)
-					color: color-get($mau,trang)
-					border-bottom: 2px solid color-get($mau,duong-2)
+					color: color-get($ankhanh,trang)
+					border-bottom: 2px solid color-get($ankhanh,duong-1)
 				.nav-item
 					+pad(r(12px) 0)
-					border-bottom: 2px dashed color-get($mau,trang)
+					border-bottom: 2px dashed color-get($ankhanh,trang)
 					.nav-link
 						+fz(r(15px))
 						+pad(0)
-						color: color-get($mau,trang)
+						color: color-get($ankhanh,trang)
