--- a/lib/product/p-1/index.sass
+++ b/lib/product/p-1/index.sass
@@ -6,20 +6,21 @@
 .product-home
 	.h1
 		+mar(2rem 0)
-		+fz(1.8rem)
-		color: color-get($mau,main)
+		+fz(2rem)
+		color: color-get($ankhanh,main)
 		font-weight: bold
 		+media-breakpoint-up(lg)
 			+mar(4rem 0)
+			+fz(r(36px))
 	.link
 		text-decoration: none
-		color: color-get($mau,den)
+		color: color-get($ankhanh,den)
 		&:hover, &:active
-			color: color-get($mau,trang)
+			color: color-get($ankhanh,trang)
 			.item
 				figure
 					.box-content
-						background: linear-gradient(to right, #edd47c, #b18308)
+						background: linear-gradient(to right, #eed57e, #ba8c2d)
 		.item
 			min-height: 18.1rem
 			display: flex
@@ -30,7 +31,7 @@
 				+mar(0)
 				.box-content
 					+pad(1.5rem 0)
-					background: color-get($mau,xam-1)
+					background: color-get($ankhanh,xam-cs)
 					.h2
-						+fz(1.2rem)
+						+fz(r(18px))
 						+mar(0)
