--- a/lib/slider/s-2/index.sass
+++ b/lib/slider/s-2/index.sass
@@ -9,7 +9,7 @@
 		+pad(4rem 0)
 	.h2
 		text-transform: uppercase
-		color: color-get($mau, main)
+		color: color-get($ankhanh, main)
 		+fw(bold)
 		+fz(2rem)
 		+media-breakpoint-up(lg)
@@ -21,13 +21,13 @@
 				outline: 0
 	.wrap
 		.nav
-			background: color-get($mau, main)
+			background: color-get($ankhanh, main)
 			opacity: .7
 			justify-content: center
 			.slick-track
 				width: auto!important
 			.item
-				color: color-get($mau,trang)
+				color: color-get($ankhanh,trang)
 				+pad(1rem 1.5rem)
 				position: relative
 				text-transform: uppercase
@@ -40,24 +40,24 @@
 				// 	content: ''
 				// 	width: 100%
 				// 	height: 1px
-				// 	background: color-get($mau,main)
+				// 	background: color-get($ankhanh,main)
 				// 	+pos(abs,null null 9px 0)
 				&.slick-current
 					h4
 						text-align: center
-						color: color-get($mau,trang)
+						color: color-get($ankhanh,trang)
 						+fw(bold)
 					// &:before
-					// 	background: color-get($mau, trang)
+					// 	background: color-get($ankhanh, trang)
 					// &:after
-					// 	background: color-get($mau, trang)
+					// 	background: color-get($ankhanh, trang)
 				// &:before
 				// 	content: ''
 				// 	width: 10px
 				// 	height: 10px
 				// 	position: absolute
 				// 	bottom: 0
-				// 	background: color-get($mau,main)
+				// 	background: color-get($ankhanh,main)
 				// 	border-radius: 50%
 				// 	left: 50%
 				// 	transform: translate(-50%, -50%)
@@ -69,7 +69,7 @@
 			+pad(2rem null)
 			.text
 				+pad(null 3rem)
-				color: color-get($mau, main)
+				color: color-get($ankhanh, main)
 				text-align: center
 				h3
 					display: inline-block
@@ -83,14 +83,14 @@
 						width: 8px
 						height: 8px
 						+bor-rad(50%)
-						background: color-get($mau,main)
+						background: color-get($ankhanh,main)
 						+pos(abs, null null -4px 50%)
 						transform: translateX(-50%)
 					&:after
 						content: ''
 						width: 100%
 						height: 1px
-						background: color-get($mau,main)
+						background: color-get($ankhanh,main)
 						+pos(abs, null null 0 0)
 			.slick-arrow
 				background: rgba(0,0,0,.3)
@@ -115,8 +115,8 @@
 					&:before
 						+opacity(.5)
 				&:hover 
-					background: color-get($mau,main)
-					color: color-get($mau,trang)
+					background: color-get($ankhanh,main)
+					color: color-get($ankhanh,trang)
 		+media-breakpoint-up(lg)
 			.slick-arrow
 				display: none
