--- a/lib/tienich/t-1/index.sass
+++ b/lib/tienich/t-1/index.sass
@@ -8,9 +8,9 @@
 	text-align: center
 	margin-bottom: 1rem
 	.ak-title
-		+fz(2.57rem)
+		+fz(2rem)
 		+fw(600)
-		color: color-get($mau,main )
+		color: color-get($ankhanh,main )
 		// margin-bottom: 2rem
 		margin-bottom: 1rem
 		text-transform: uppercase
@@ -18,18 +18,19 @@
 			text-align: center
 	.sub-title
 		+fw(300)
-		color: #333333 // change it to color-get($mau ,...)
+		color: color-get($ankhanh, content) // change it to color-get($ankhanh ,...)
 	+media-breakpoint-up(lg)
 		margin-bottom: 2rem
 		.ak-title
+			+fz(r(36px))
 			margin-bottom: 2rem
 		.sub-title
-			+fz(1.14rem)
+			+fz(r(16px))
 			max-width: 88%
 			margin: 0 auto
 
 .canhcam-utilities-1,.canhcam-utilities-2
-	background: color-get($mau , trang )
+	background: color-get($ankhanh , trang )
 	overflow: hidden
 	.utilitie-list
 		+pad(2rem null 1rem null)
@@ -42,13 +43,13 @@
 						width: 100%
 				figcaption
 					h3
-						+fz(1.2rem)
+						+fz(r(22px))
 						+fw(600)
 					p
-						+fz(1rem)
-						color: #333333 // change it to color-get($mau ,...)
+						+fz(r(16px))
+						color: color-get($ankhanh, content) // change it to color-get($ankhanh ,...)
 						&.see-more
-							color: color-get($mau , main)
+							color: color-get($ankhanh , main)
 							margin-bottom: 0
 							&:after
 								content: '\e87a'
@@ -88,11 +89,11 @@
 						+transition(all .5s ease-in-out)
 						figcaption
 							h3 , p
-								color: color-get($mau , trang)
+								color: color-get($ankhanh , trang)
 							h3
-								+fz(1.57rem)
+								+fz(r(22px))
 							p
-								+fz(1.14rem)
+								+fz(r(16px))
 								opacity: .8
 								&.see-more
 									opacity: 1
