--- a/lib/tienich/t-2/index.sass
+++ b/lib/tienich/t-2/index.sass
@@ -16,8 +16,8 @@
 				figure
 					figcaption
 						p
-							color: #3e3e3e // add this color to color core to use color-get
-							+fz(1.07rem)
+							color: color-get($ankhanh, content) // add this color to color core to use color-get
+							+fz(r(16px))
 							+fw(400)
 							text-align: center
 							overflow: hidden
@@ -31,14 +31,14 @@
 				figure
 					figcaption
 						h2
-							+fz(3.43rem)
+							+fz(r(46px))
 							+fw(600)
-							color: color-get($mau , main)
+							color: color-get($ankhanh , main)
 							span
 								display: block
-								+fz(1.86rem)
+								+fz(r(26px))
 						p
-							+fz(1.14rem)
+							+fz(r(16px))
 							+fw(300)
 	+media-breakpoint-up(lg)
 		.utilitie-wrap
@@ -51,7 +51,7 @@
 						content: ''
 						width: 100%
 						height: 0
-						background: color-rgba(color-get($mau , main),.3)
+						background: color-rgba(color-get($ankhanh , main),.3)
 						+pos(abs , 50% null null 50%)
 						+transform(translateX(-50%) translateY(-50%) rotate(45deg))
 						+transition(all .5s ease-in-out)
