--- a/templates/bonhandangthuonghieu.pug
+++ b/templates/bonhandangthuonghieu.pug
@@ -10,3 +10,5 @@ block body
 	include ../lib/slider/s-1/index.pug
 	include ../lib/nav/n-4/index.pug
 	include ../lib/ankhanhjvc/t-6/index.pug
+block footer
+	include ../lib/ankhanh-footer/f-1/index.pug
