--- a/templates/index.pug
+++ b/templates/index.pug
@@ -15,4 +15,6 @@ block body
 	include ../lib/index/b-5/index.pug
 	include ../lib/slider/s-2/index.pug
 	include ../lib/index/b-6/index.pug
-	include ../lib/form/f-1/index.pug
+	include ../lib/ankhanh-footer/f-1/index.pug
+block footer
+	include ../lib/ankhanh-footer/f-1/index.pug
