--- a/templates/quyhoach.pug
+++ b/templates/quyhoach.pug
@@ -10,3 +10,5 @@ block body
 	include ../lib/slider/s-1/index.pug
 	include ../lib/nav/n-2/index.pug
 	include ../lib/introduce/quyhoach/q-1/index.pug
+block footer
+	include ../lib/ankhanh-footer/f-1/index.pug
