--- a/templates/tienich.pug
+++ b/templates/tienich.pug
@@ -9,4 +9,5 @@ block header
 block body
 	include ../lib/slider/s-1/index.pug
 	include ../lib/tienich/t-1/index.pug
-
+block footer
+	include ../lib/ankhanh-footer/f-1/index.pug
