--- a/lib/introduce/quyhoach/q-1/index.pug
+++ b/lib/introduce/quyhoach/q-1/index.pug
@@ -1,7 +1,7 @@
-section.canhcam-project-detail-6#canhcam-detail-section-6(bg-img="./img/bg/bg-splendora.png")
-	.container.bg-white
+section.canhcam-introduce-detail-2#canhcam-detail-section-2(bg-img="./img/bg/bg-splendora.png")
+	.container.fixed-width.bg-white
 		.slide
-			h2.title.text-center.text-uppercase.mb-4.mb-lg-5 quy hoạch
+			h2.title.text-center.text-uppercase quy hoạch
 			.row.text-center.text-lg-left.mb-4
 				.col-12
 					p.content Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla, assumenda ipsam culpa laborum ab saepe possimus enim voluptate voluptatum, aliquid maiores necessitatibus laboriosam ducimus dolor natus explicabo iusto repudiandae harum? Aliquid maiores necessitatibus laboriosam ducimus dolor natus explicabo iusto repudiandae harum?
