--- a/lib/introduce/thietke/t-1/index.pug
+++ b/lib/introduce/thietke/t-1/index.pug
@@ -1,17 +1,17 @@
-section.canhcam-project-detail-7#canhcam-detail-section-7
-	.container
+section.canhcam-introduce-detail-3#canhcam-detail-section-3(bg-img="./img/bg/bg-splendora.png")
+	.container.fixed-width.bg-white
 		.slide
-			h2.text-center.text-uppercase.title.mb-4.mb-lg-5 thiết kế
+			h2.text-center.text-uppercase.title thiết kế
 			.row.text-center
 				.col-12.mb-4.text.center
 					figure
 						figcaption 
 							p.content Khu đô thị Splendora bao gồm các khu: khu thương mại, khu nhà ở chung cư cao tầng, khu văn hóa công cộng và khu nhà ở thấp tầng. 
-				.col-12.mb-5
+				.col-12.mb-4
 					figure.box-img
 						img(src="./img/gioithieu/thietke/img-1.png", alt="")
 						figcaption
-				.col-lg-6.text-left.mb-4.mb-lg-0
+				.col-lg-6.text-left.mb-4
 					figure
 						figcaption.box-content
 							ul.list-unstyled
@@ -44,7 +44,7 @@ section.canhcam-project-detail-7#canhcam-detail-section-7
 											p Khu thương mại và mua sắm : Hệ thống trung tâm thương mại, mua sắm thuận tiện và sang trọng.
 										li
 											p Khu thể thao : Khu thể thao, công viên giải trí.
-				.col-lg-6
+				.col-lg-6.mb-4
 					figure.box-img
 						img.img-fluid(src="./img/gioithieu/thietke/img-2.png", alt="alt")
 						figcaption 
