--- a/lib/introduce/tongquan/t-1/index.pug
+++ b/lib/introduce/tongquan/t-1/index.pug
@@ -1,7 +1,7 @@
-section.canhcam-project-detail-5#canhcam-detail-section-5
-	.container
+section.canhcam-introduce-detail-1#canhcam-detail-section-1(bg-img="./img/bg/bg-splendora.png")
+	.container.fixed-width.bg-white
 		.slide
-			h2.text-center.text-uppercase.title.mb-4.mb-lg-5 tổng quan
+			h2.text-center.text-uppercase.title tổng quan
 			.row.text-center.text-md-left
 				.col-12.mb-4
 					h3.brief-content Khu đô thị Splendora
@@ -49,7 +49,7 @@ section.canhcam-project-detail-5#canhcam-detail-section-5
 								.itemc(bg-img="./img/gioithieu/tongquan/slider-1.png")
 									h4.title-slider Khu biệt thự và liền kề thuộc giai đoạn 1 dự án Splendora
 			.row
-				.col
+				.col.mb-5
 					article.owl-carousel.carousel-1.owl-theme.list-items
 						.item.active(data-to="1")
 							figure.w-100
