--- a/lib/introduce/phattrien/p-1/index.pug
+++ b/lib/introduce/phattrien/p-1/index.pug
@@ -1,54 +1,82 @@
-section.canhcam-project-detail-8#canhcam-detail-section-8
-	.container
+section.canhcam-introduce-detail-4#canhcam-detail-section-4(bg-img="./img/bg/bg-splendora.png")
+	.container.fixed-width.bg-white
 		.slide
-			h2.title.text-center.text-uppercase.mb-4.mb-lg-5 Các giai đoạn phát triển
-			//- .row.text-center.text-lg-left.mb-4
-			//- 	.col-12
-			//- 		p.content Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla, assumenda ipsam culpa laborum ab saepe possimus enim voluptate voluptatum, aliquid maiores necessitatibus laboriosam ducimus dolor natus explicabo iusto repudiandae harum? Aliquid maiores necessitatibus laboriosam ducimus dolor natus explicabo iusto repudiandae harum?
-			//- .row.mb-4.text-center
-			//- 	.col-lg-6.mb-4.mb-lg-0
-			//- 		figure
-			//- 			img.img-fluid(src="./img/gioithieu/quyhoach/img-1.png", alt="")
-			//- 	.col-lg-6.text-left
-			//- 		figure
-			//- 			figcaption.box-content
-			//- 				ul.list-unstyled
-			//- 					li.item.mb-4
-			//- 						h3.brief-content Quy hoạch phân khu chức năng
-			//- 					li.item.mb-4
-			//- 						p.item-content.mb-3 Khu thương mại (498,000 m
-			//- 							sup 2
-			//- 							|)
-			//- 						ul.circle
-			//- 							li
-			//- 								p Tòa tháp thương mại cao tầng tọa lạc tại vị trí trung tâm của dự án.
-			//- 							li 
-			//- 								p Các khu vực nhà cộng đồng.
-			//- 					li.item.mb-4
-			//- 						p.item-content.mb-3 Nhà ở (8,593 căn)
-			//- 						ul.circle
-			//- 							li
-			//- 								p Biệt thự được thiết kế theo phong cách kiến trúc châu Âu.
-			//- 							li
-			//- 								p Liền kề được thế kế có vườn cảnh với 3 kiểu khác nhau.
-			//- 							li
-			//- 								p Chung cư cao tầng.
-			//- 					li.item.mb-4
-			//- 						p.item-content.mb-3 Tiện ích công cộng hiện đại
-			//- 						ul.circle
-			//- 							li
-			//- 								p Hệ thống giáo dục bao gồm trường mẫu giáo, trường tiểu học, trung học cơ sở và phổ thông trung học.
-			//- 							li
-			//- 								p Phòng khám.
-			//- 							li
-			//- 								p Công viên hồ điều hòa trung tâm.
-			//- 							li
-			//- 								p Hệ thống nhà hàng và trung tâm giải trí.
-			//- .row.mb-4
-			//- 	h3.brief-content.text-left.mb-4.mb-lg-5 Kế hoạch sử dụng đất
-			//- 	.col-12
-			//- 		figure.box-img
-			//- 			img.img-fluid(src="./img/gioithieu/quyhoach/img-2.png", alt="")
-			//- 	.col-12
-			//- 		figure.box-img
-			//- 			img.img-fluid(src="./img/gioithieu/quyhoach/img-3.png", alt="")
+			h2.text-center.text-uppercase.title Các giai đoạn phát triển
+			//- .row.text-center.text-md-left
+			//- 	.col-12.mb-4
+			//- 		h3.brief-content Khu đô thị Splendora
+			//- .row.mb-4.text-center.text-md-left
+			//- 	.col-md-6
+			//- 		p.content.mb-4 Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium, ratione animi ullam dignissimos laudantium laboriosam molestiae corrupti minus tempora saepe quo cumque optio consequatur.
+			//- 		p.content Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium, ratione animi ullam dignissimos laudantium laboriosam molestiae corrupti minus tempora saepe quo cumque optio consequatur.
+			//- 	.col-md-6
+			//- 		p.content.mb-4 Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium, ratione animi ullam dignissimos laudantium laboriosam molestiae corrupti minus tempora saepe quo cumque optio consequatur provident odit facere quae aperiam dolor?
+			//- 		p.content.mb-4 Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium, ratione animi ullam dignissimos laudantium laboriosam molestiae corrupti minus tem
+			//- 		p.content Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium, ratione animi ullam dignissimos laudantium laboriosam molestiae corrupti minus tem
+			//- .row
+			//- 	.col
+			//- 		article.carousel-2
+			//- 			.item.active(data-slider="1")
+			//- 				.owl-carousel.owl-theme
+			//- 					.itemc(bg-img="./img/gioithieu/tongquan/slider-1.png")
+			//- 						h4.title-slider Khu biệt thự và liền kề thuộc giai đoạn 1 dự án Splendora
+			//- 			.item.active(data-slider="2") 
+			//- 				.owl-carousel.owl-theme
+			//- 					.itemc(bg-img="./img/gioithieu/tongquan/slider-tiny-1.png")
+			//- 						h4.title-slider Khu biệt thự và liền kề thuộc giai đoạn 1 dự án Splendora
+			//- 			.item.active(data-slider="3") 
+			//- 				.owl-carousel.owl-theme
+			//- 					.itemc(bg-img="./img/gioithieu/tongquan/slider-1.png")
+			//- 						h4.title-slider Khu biệt thự và liền kề thuộc giai đoạn 1 dự án Splendora
+			//- 			.item.active(data-slider="4") 
+			//- 				.owl-carousel.owl-theme
+			//- 					.itemc(bg-img="./img/gioithieu/tongquan/slider-1.png")
+			//- 						h4.title-slider Khu biệt thự và liền kề thuộc giai đoạn 1 dự án Splendora
+			//- 			.item.active(data-slider="5") 
+			//- 				.owl-carousel.owl-theme
+			//- 					.itemc(bg-img="./img/gioithieu/tongquan/slider-1.png")
+			//- 						h4.title-slider Khu biệt thự và liền kề thuộc giai đoạn 1 dự án Splendora
+			//- 			.item.active(data-slider="6") 
+			//- 				.owl-carousel.owl-theme
+			//- 					.itemc(bg-img="./img/gioithieu/tongquan/slider-1.png")
+			//- 						h4.title-slider Khu biệt thự và liền kề thuộc giai đoạn 1 dự án Splendora
+			//- 			.item.active(data-slider="7") 
+			//- 				.owl-carousel.owl-theme
+			//- 					.itemc(bg-img="./img/gioithieu/tongquan/slider-1.png")
+			//- 						h4.title-slider Khu biệt thự và liền kề thuộc giai đoạn 1 dự án Splendora
+			//- 			.item.active(data-slider="8") 
+			//- 				.owl-carousel.owl-theme
+			//- 					.itemc(bg-img="./img/gioithieu/tongquan/slider-1.png")
+			//- 						h4.title-slider Khu biệt thự và liền kề thuộc giai đoạn 1 dự án Splendora
+			//- .row
+			//- 	.col
+			//- 		article.owl-carousel.carousel-1.owl-theme.list-items
+			//- 			.item.active(data-to="1")
+			//- 				figure.w-100
+			//- 					img(src="./img/gioithieu/tongquan/slider-tiny-1.png")
+			//- 			.item(data-to="2")
+			//- 				figure.w-100
+			//- 					img(src="./img/gioithieu/tongquan/slider-tiny-2.png")
+			//- 			.item(data-to="3")
+			//- 				figure.w-100
+			//- 					img(src="./img/gioithieu/tongquan/slider-tiny-3.png")
+			//- 			.item(data-to="4")
+			//- 				figure.w-100
+			//- 					img(src="./img/gioithieu/tongquan/slider-tiny-4.png")
+
+			//- 			.item(data-to="5")
+			//- 				figure.w-100
+			//- 					img(src="./img/gioithieu/tongquan/slider-tiny-5.png")
+
+			//- 			.item(data-to="6")
+			//- 				figure.w-100
+			//- 					img(src="./img/gioithieu/tongquan/slider-tiny-1.png")
+
+			//- 			.item(data-to="7")
+			//- 				figure.w-100
+			//- 					img(src="./img/gioithieu/tongquan/slider-tiny-2.png")
+
+			//- 			.item(data-to="8")
+			//- 				figure.w-100
+			//- 					img(src="./img/gioithieu/tongquan/slider-tiny-3.png")
+
