--- a/lib/introduce/phattrien/p-1/index.sass
+++ b/lib/introduce/phattrien/p-1/index.sass
@@ -3,34 +3,126 @@
 // CODE
 //////////////////////////////////////
 
-section.canhcam-project-detail-8
-	+pad(3rem 0)
-	background: color-get($ankhanh,trang)
-	+media-breakpoint-up(lg)
-		+pad(0 0 4rem 0)
-	.slide
-		.title
-			+fz(2rem)
-			color: color-get($ankhanh,main)
-			font-weight: bold
-			+media-breakpoint-up(lg)
-				+fz(r(36px))
-		.content
-			+fz(r(16px))
-		.brief-content
-			+fz(r(22px))
-			color: color-get($ankhanh,brief-content)
-		.item
-			.circle
-				list-style-type: disc
-			p
+section.canhcam-introduce-detail-4
+	.fixed-width
+		+pad(0 5%)
+		.slide
+			.title
+				+pad(2rem 0)
+				// margin-top: r(46px)
+				+fz(2rem)
+				color: color-get($ankhanh,main)
+				font-weight: bold
 				+mar(0)
-		.box-img
-			img
-				width: 100%
-		+media-breakpoint-up(lg)
-			.box-img
-				display: flex
-				justify-content: center
+				+media-breakpoint-up(lg)
+					padding: 4rem 0
+					+fz(r(36px))
+			.brief-content
+				+fz(r(22px))
+				color: color-get($ankhanh,brief-content)
+		// +media-breakpoint-up(lg)
+		// 	.slide
+		// 		+pad(null 6rem)
+		// 	+pad(4rem 0)
+		.owl-carousel
+			.owl-item
 				img
-					width: initial
+					padding: .5rem
+		.carousel-1
+			color: color-get($ankhanh,trang)
+			.item
+				position: relative
+				justify-content: center
+				display: flex
+				&.active
+					color: color-get($ankhanh,extra)
+				figure
+					+mar(0)
+			// Nav
+			
+			.owl-nav
+				margin-top: 0
+				button
+					&.owl-prev, &.owl-next
+						+pad(.5rem_)
+						width: 3rem
+						height: 3rem
+						+bor-rad(50%)
+						text-align: center
+						color: color-get($ankhanh,main)
+						background: color-get($ankhanh,trang)
+						&:focus
+							outline: none
+					+media-breakpoint-up(lg)
+						&.owl-prev, &.owl-next
+							color: color-get($ankhanh,main)
+							background: transparent
+							transform: translateY(-50%)
+							&.owl-prev
+								+pos(abs,50% null null -5%)
+							&.owl-next
+								+pos(abs,50% -5% null null)
+			.owl-dots
+				span
+					width: 8px
+					height: 8px
+				.owl-dot
+					&.active
+						span
+							background: color-get($ankhanh,extra)
+		.carousel-2
+			.item
+				display: none
+				+pad(0 .5rem)
+				&.active
+					display: block
+				.itemc
+					display: flex
+					align-items: flex-end
+					min-height: 500px
+					.title-slider
+						text-align: center
+						width: 100%
+						+mar(0)
+						+pad(1rem null)
+						color: color-get($ankhanh,trang)
+						background: rgba(0, 0, 0, 0.6)
+			.owl-nav
+				button
+					&.owl-prev, &.owl-next
+						+pad(.5rem_)
+						width: 3rem
+						height: 3rem
+						color: color-get($ankhanh,trang)
+						+bor-rad(50%)
+						background: color-get($ankhanh,main)
+						text-align: center
+						&:focus
+							outline: none
+					&:hover, &.active
+						&.owl-prev, &.owl-next
+							background: color-get($ankhanh,main)
+							color: color-get($ankhanh,trang)
+				+media-breakpoint-up(md)
+					+opacity(1)
+					margin-top: 0
+					+transition(all .3s ease-in-out)
+					button
+						&.owl-prev, &.owl-next
+							width: auto
+							height: auto
+							border-radius: 0
+							background: none
+							+fz(3rem)
+							margin: 0
+							+transform(translateY(-50%))
+							&:focus
+								outline: none
+							&:hover, &.active
+								&.owl-prev, &.owl-next
+									background: none
+									color: color-get($ankhanh,extra)
+						&.owl-prev
+							+pos(abs, 50% null null 1rem)
+						&.owl-next
+							+pos(abs, 50% 1rem null null)
