--- a/lib/nav/n-2/index.pug
+++ b/lib/nav/n-2/index.pug
@@ -1,11 +1,11 @@
-section.canhcam-nav-4
-	.container
+section.canhcam-nav-4(bg-img="./img/bg/bg-splendora.png")
+	.container.bg-white
 		ul.nav.nav-list
 			li.nav-item
 				a.nav-link(href="tongquan.html") Tổng quan
-			li.nav-item.active
+			li.nav-item
 				a.nav-link(href="quyhoach.html") Quy hoạch
+			li.nav-item.active
+				a.nav-link(href="thietke.html") Thiết kế
 			li.nav-item
 				a.nav-link(href="phattrien.html") Phát triển
-			li.nav-item
-				a.nav-link(href="thietke.html") Thiết kế
