--- a/templates/phattrien.pug
+++ b/templates/phattrien.pug
@@ -7,7 +7,7 @@ block variables
 block header
 	include ../lib/header/h-14/index.pug
 block body
-	include ../lib/slider/s-1/index.pug
+	include ../lib/ankhanh-breadcrumb/b-1/index.pug
 	include ../lib/nav/n-2/index.pug
 	include ../lib/introduce/phattrien/p-1/index.pug
 block footer
