add breadcumb for all page

--- a/lib/index/b-2/index.sass
+++ b/lib/index/b-2/index.sass
@@ -33,11 +33,11 @@
 			.box-content
 				color: #fff
 				.brief-content
-					+fz(1.15rem)
+					+fz(r(16px))
 					+mar(0 0 2rem 0)
 					font-weight: 300
 				.btn-more
-					+fz(1rem)
+					+fz(r(16px))
 					color: color-get($ankhanh,trang)
 					+pad(r(11px) r(38px))
 					border-radius: 20px
