--- a/lib/product/p-1/index.pug
+++ b/lib/product/p-1/index.pug
@@ -1,5 +1,5 @@
 section.product-home(bg-img="./img/bg/bg-splendora.png")
-	.container.bg-white
+	.container.fixed-width.bg-white
 		.row
 			.col-12.text-center
 				h1.h1.text-uppercase Sản phẩm
