--- a/templates/bonhandangthuonghieu.pug
+++ b/templates/bonhandangthuonghieu.pug
@@ -7,7 +7,7 @@ block variables
 block header
 	include ../lib/header/h-14/index.pug
 block body
-	include ../lib/slider/s-1/index.pug
+	include ../lib/ankhanh-breadcrumb/b-1/index.pug
 	include ../lib/nav/n-4/index.pug
 	include ../lib/ankhanhjvc/t-6/index.pug
 block footer
