--- a/templates/bt5.pug
+++ b/templates/bt5.pug
@@ -7,8 +7,8 @@ block variables
 block header
 	include ../lib/header/h-14/index.pug
 block body
-	include ../lib/slider/s-1/index.pug
-	include ../lib/nav/n-3/index.pug
+	include ../lib/ankhanh-breadcrumb/b-1/index.pug
+	include ../lib/nav/n-5/index.pug
 	include ../lib/product/bt5/b-1/index.pug
 	include ../lib/product/bt5/b-2/index.pug
 	include ../lib/product/bt5/b-3/index.pug
